backend: new product handler methods - updateproductInvStock and updateproductInvPrice, updates price and stock for product without variants, updated swag docs
