# apps/backend/internal/domain/product/request.go
@@ -74,3 +74,13 @@ func (r CreateVariantRequest) ToVariant() *Variant {
 		ImageURL:  r.ImageURL,
 	}
 }
+
+type UpdateProductInvStockRequest struct {
+	ProductID uuid.UUID `json:"product_id" binding:"required"`
+	Stock     int       `json:"stock" binding:"required"`
+}
+
+type UpdateProductInvPriceRequest struct {
+	ProductID uuid.UUID `json:"product_id" binding:"required"`
+	Price     float64   `json:"price" binding:"required"`
+}
